--- a/style.css
+++ b/style.css
@@ -77,7 +77,8 @@ h1 {
     background-color: white;
     margin-left: 30px;
     width: 38vw;
-    margin-top: 5px;text-align: center;
+    margin-top: 5px;
+    text-align: center;
 
 }
 .second-paragraph {
@@ -106,9 +107,8 @@ h1 {
 }
 img {
     width: 25vw;
-    border-radius: 60%;
 }
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 600px) {
     .nav-section {
         overflow: hidden;
     }
@@ -116,7 +116,7 @@ img {
         flex-direction: column;
     }
     .first-header {
-        width: 60vw;
+        width: 70vw;
     }
     .second-paragraph {
         width: 60vw;
@@ -125,16 +125,19 @@ img {
        margin-top: 0px; 
     }
     main {
-        height: 100vh;
+        height: 120vh;
+        width: 85vw;
     }
     img {
-        margin-left: 30px;
-        width: 22vw;
+        margin-left: 60px;
+        width: 50vw;
+        margin-top: 10px;
+        height: 40vh;
     }
     .list-items {
         display: none;
     }
     body {
-         height: 110vh;
+         height: 150vh;
     }
 }
