--- a/style.css
+++ b/style.css
@@ -25,10 +25,8 @@ main {
     border-radius: 8px;
     text-align: center;
     color: white;
-    display: flex;
-    justify-content: space-around;
+    margin-right: 45%;
     height: 3vh;
-    margin-right: 48%;
     margin-top: 10px;
 }
 .list-items{
@@ -45,6 +43,7 @@ main {
 .logo-list {
     display: flex;
     margin-right: 10px;
+    justify-content: flex;
 }
 .hire-items{
     color: white;
@@ -65,24 +64,25 @@ h1 {
     display: flex;
     justify-content: space-between;
 }
-.first-paragraph {
+.first-div {
     background-color: white;
+    margin-left: 10px;
+}
+.first-paragraph {
     color: grey;
     border-radius: 20%;
     padding: 10px;
-    width: 130px;
-    margin-left: 30px;
+    margin-left: 40px;
+    font-size: 20px;
 }
 .first-header {
-    background-color: white;
-    margin-left: 30px;
+    margin-left: 25px;
     width: 38vw;
     margin-top: 5px;
     text-align: center;
-
+    font-size: 35px
 }
 .second-paragraph {
-    background-color: white;
     margin-left: 30px;
     width: 30vw;
     margin-top: 10px;
@@ -107,11 +107,9 @@ h1 {
 }
 img {
     width: 25vw;
+    margin-right: 20px;
 }
 @media screen and (max-width: 600px) {
-    .nav-section {
-        overflow: hidden;
-    }
     .second-section {
         flex-direction: column;
     }
@@ -125,19 +123,62 @@ img {
        margin-top: 0px; 
     }
     main {
-        height: 120vh;
+        height: 150vh;
         width: 85vw;
+        margin-top: 10px;
+        margin-left: 20px;
     }
     img {
-        margin-left: 60px;
-        width: 50vw;
-        margin-top: 10px;
-        height: 40vh;
+        width: 100%;
+        height: 60vh;
+        
     }
     .list-items {
         display: none;
     }
     body {
-         height: 150vh;
+         height: 165vh;
+    } 
+    .hire-items {
+        padding: 10px;
+    }
+    .first-div {
+        margin-left: 1px;
+        margin-top: -10px;
     }
 }
+@media screen and (min-width: 600px) and (max-width: 1100px) {
+    .first-div {
+        height: 85vh;
+    }
+    main {
+        height: 110vh
+    }
+    body {
+        height: 140vh
+    }
+    .logo-nav {
+        margin-left: 0;
+        margin-right: auto;
+    }
+    .list-items {
+        display: none;
+    }
+    img {
+        margin-right: 20px;
+        height: 85vh;
+        width: 38vw;
+    }
+    .hire-items {
+        height: 2vh;
+        padding: 11px;
+    }
+    .nav-section {
+        justify-content: start;
+
+    }
+}
+ @media screen and (min-width: 500px) and (max-width:
+   700px) {
+
+   }  
